# client-server-merkle

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.client  Dockerfile.server  README.md  docker-compose.yml
client/: Cargo.toml
client/src/: main.rs
merkle/: Cargo.toml
merkle/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
