[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"]}
clap = { version = "4.0", features = ["derive"]}
tokio = { version = "1", features = ["full"]}
merkle = { path = "../merkle"}
