[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"]}
clap = { version = "4.0", features = ["derive"]}
tokio = { version = "1", features = ["full"]}
merkle = { path = "../merkle"}
base64 = "0.22.1"
anyhow = "1.0.100"
urlencoding = "2.1.3"
hex = "0.4.3"
serde_json = "1.0.145"
