[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-multipart = "0.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
merkle = { path = "../merkle"}
base64 = "0.22.1"
hex = "0.4.3"
serde_json = "1.0.145"
